@@ -27,7 +27,8 @@ import javax.servlet.jsp.JspException;
 
 import org.infoglue.deliver.taglib.component.ComponentLogicTag;
 
-public class BoundContentsTag extends ComponentLogicTag {
+public class BoundContentsTag extends ComponentLogicTag 
+{
 	private static final long serialVersionUID = 4050206323348354355L;
 
 	private String propertyName;
@@ -45,9 +46,9 @@ public class BoundContentsTag extends ComponentLogicTag {
         return EVAL_PAGE;
     }
 
-	public void setPropertyName(String name) 
+	public void setPropertyName(String propertyName) throws JspException
 	{
-		this.propertyName = name;
+        this.propertyName = evaluateString("boundContents", "propertyName", propertyName);
 	}
 	
 	public void setUseInheritence(boolean useInheritance)
