@@ -68,9 +68,9 @@ public class SiteNodeTag extends ComponentLogicTag
         this.siteNodeId = siteNodeId;
     }
 
-    public void setPropertyName(String propertyName)
+    public void setPropertyName(String propertyName) throws JspException
     {
-        this.propertyName = propertyName;
+        this.propertyName = evaluateString("siteNode", "propertyName", propertyName);
     }
 
     public void setUseInheritance(boolean useInheritance)
